--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^7.0.0-0",
-    "prettier": "^1.19.1"
+    "node-sass": "^5.0.0",
+    "prettier": "^1.19.1",
+    "sass-loader": "^10.0.5"
   },
   "eslintConfig": {
     "root": true,
